WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35507
REGRESSION: toolbar is displayed below the main content at
http://www.glom.org/
https://bugs.webkit.org/show_bug.cgi?id=35507
Summary
REGRESSION: toolbar is displayed below the main content at http://www.glom.org/
Michael Gilbert
Reported
2010-02-28 18:00:25 PST
+++ This bug was initially created as a clone of
Bug #35483
+++ hi, a debian user reported the following [0] for epiphany, and i've tested that the same problems exist in all webkit-based browesers: Epiphany-webkit fails on a number of pages. Some exampels: *
http://www.glom.org/
(problems with left sidebar) thanks. [0]
http://bugs.debian.org/552090
Attachments
Extend KHTMLFixes.css site-specific hack
(1.97 KB, patch)
2010-03-12 13:16 PST
,
mitz
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-03-02 15:49:03 PST
I don't see any difference between Safari and Firefox here. Could you clarify what the problem is? Or is it only reproducible in Gtk port? What about Qt?
Alexey Proskuryakov
Comment 2
2010-03-02 15:55:43 PST
Sorry, I wasn't able to reproduce with shipping Safari/WebKit 4.0.4, but the sidebar is missing in ToT
r55431
. There are some JavaScript errors in console, which may or may not be related:
http://www.glom.org/wiki/skins/common/wikibits.js:104
: JS ERROR: ReferenceError: Can't find variable: wgBreakFrames
http://www.glom.org/wiki/skins/common/wikibits.js:231
: JS ERROR: TypeError: Result of expression 'tooltipAccessKeyRegexp' [undefined] is not an object.
Alexey Proskuryakov
Comment 3
2010-03-02 15:59:54 PST
<
rdar://problem/7709115
>
Michael Gilbert
Comment 4
2010-03-02 17:40:58 PST
it's not really missing, it's just rendered at the bottom of the page.
Alexey Proskuryakov
Comment 5
2010-03-12 12:18:11 PST
This site uses an old version of MediaWiki code, which includes an incorrect stylesheet for WebKit browsers, see
bug 28350
. We could add a site-specific workaround, and/or we ask the site to update their version of MediaWiki.
mitz
Comment 6
2010-03-12 13:12:05 PST
Oh, I see. <
http://trac.webkit.org/changeset/48818
> changed only <link>, not @import. Making the same change for @import fixes this.
mitz
Comment 7
2010-03-12 13:16:38 PST
Created
attachment 50626
[details]
Extend KHTMLFixes.css site-specific hack
Alexey Proskuryakov
Comment 8
2010-03-12 13:20:34 PST
Comment on
attachment 50626
[details]
Extend KHTMLFixes.css site-specific hack r=me
mitz
Comment 9
2010-03-12 13:24:32 PST
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/55935
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug