<rdar://problem/7709115> REGRESSION: toolbar is missing at http://www.glom.org/ https://bugs.webkit.org/show_bug.cgi?id=35507

Reviewed by Alexey Proskuryakov.

* css/CSSImportRule.cpp:
(WebCore::CSSImportRule::setCSSStyleSheet): Extend the change made in
<http://trac.webkit.org/changeset/48818> to detect the two variants of
KHTMLFixes.css in @import rules as well as in <link> elements.



Canonical link: https://commits.webkit.org/47230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55935 268f45cc-cd09-0410-ab3c-d52691b4dbfc